--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,12 +10,15 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_riverpod: ^2.5.1
+  freezed: ^2.5.2
+  freezed_annotation: ^2.4.3
   google_fonts: ^6.2.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^3.0.0
+  build_runner: ^2.4.11
 
 flutter:
   uses-material-design: true
